fix layout issues

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -10,6 +10,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 2em;
 
   .header__nav {
     list-style-type: none;
@@ -17,6 +18,7 @@ body {
     position: absolute;
     top: 0;
     width: 100%;
+    font-size: .6em;
 
     li:nth-child(1) {
       float: left;
