--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -1,3 +1,6 @@
 .intro {
+  padding-top: 20px;
   text-align: center;
+  height: 400px;
+  background: $tertiary-color;
 }
